@@ -22,7 +22,7 @@ Matthew Moore
 Colin Caughie <c.caughie@indigovision.com>
 David Carvalho <andaris@gmail.com>
 David Reiss <dreiss@facebook.com>
-Matt Holiday 
+Matt Holiday
 Michael Cronenworth <mike@cchtml.com>
 Mika Raento <mikie@iki.fi>
 Mike Crowe <mac@mcrowe.com>
@@ -45,6 +45,7 @@ Jan Janak <jan@janakj.org>
 Matthew Mundell <matthew.mundell@greenbone.net>
 Scott Goldman <scottjg@github.com>
 Jared Cantwell
+Luke-Jr <luke@dashjr.org>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
